working google sheet stored contact form

--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/mdx": "^3.1.0",
+    "@astrojs/react": "^3.6.0",
     "@iconify-json/ic": "^1.1.17",
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/tabler": "^1.1.113",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.10.1",
     "astro-icon": "^1.1.0",
     "postcss": "^8.4.38",
     "postcss-preset-env": "^9.5.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
